Final polishing for ssl commerce

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DB_USER=choloBD
 DB_PASSWORD=UJTEQllpUu6RbkLr
 STORE_ID=iqbal643b4511d93c2
 STORE_PASSWORD=iqbal643b4511d93c2@ssl
+CLIENT_URL=http://localhost:3000
